<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">教会</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="confirm"> 确认</string>
    <string name="commit">提交</string>
    <string name="quit_app">退出登陆</string>
    <string name="internet_address_is_not_found">服务器地址不存在</string>
    <!-- 注册 -->
    <string name="register">注册</string>
    <string name="reg_nickname_label">用户名</string>
    <string name="reg_nickname_hint">请输入用户名</string>
    <string name="reg_pwd_hint">请输入密码</string>
    <string name="reg_pwd_label">密码</string>
    <string name="reg_pwd_repeat_label">重复</string>
    <string name="reg_pwd_repeat_hint">请重复输入密码</string>
    <string name="reg_tel_label">手机号</string>
    <string name="reg_tel_hint">请输入手机号</string>
    <string name="reg_invite_code_label">邀请码</string>
    <string name="reg_invite_code_hint">请输入邀请码</string>
    <string name="reg_verification_code_text_hint">请输入验证码</string>
    <string name="reg_verification_code_btn">(%1$s)后重新获取</string>
    <string name="reg_verification_code_btn_hint">获取验证码</string>
    <string name="reg_commit_btn">注册</string>
    <string name="reg_pwd_different">两次密码不相同</string>
    <string name="login">登录</string>
    <string name="reg_verfi_code_send_success">发送成功</string>
    <string name="reg_verfi_code_send_failed">发送失败</string>
    <!-- 祷告墙 -->
	<string name="add_blog_hint">说点什么吧。。。</string>
	<string name="blog_categroy">帖子分类</string>
	<string name="blog_add">发布祷告</string>
	<string name="no_blog_tips">暂时没有祷告发布</string>
	<string name="blog_categroy_chose_tips">请选择分类</string>
	<string name="publish">发布</string>
	<string name="comment">评论(%1$s)</string>
	<string name="recive_pray">领取代祷(%1$s)</string>
	<string name="recive_pray_faile_tips">领取代祷失败</string>
	
	<!-- 完善信息 -->
	<string name="perfect_userinfo">完善信息</string>
	<string name="perfect_name_label">姓名</string>
	<string name="perfect_name_hint">请输入真实姓名</string>
	<string name="perfect_age_label">生日</string>
	<string name="perfect_age_hint">请输入生日(格式:1980-02-08)</string>
	<string name="perfect_education_label">学历</string>
	<string name="perfect_education_hint">请输入学历</string>
	<string name="perfect_vocation_label">职业</string>
	<string name="perfect_vocation_hint">请输入职业</string>
	<string name="perfect_church_service_label">教会侍奉</string>
	<string name="perfect_church_service_hint">请输入教会侍奉</string>
	<string name="perfect_rebirth_label">信主年历</string>
	<string name="perfect_rebirth_hint">请输入信主年历(格式:1980-02-08)</string>
	<string name="perfect_area_label">代祷地区</string>
	<string name="perfect_area_hint">请输入代祷地区</string>
	<string name="perfect_period_label">代祷时段</string>
	<string name="perfect_period_hint">请输入代祷时段</string>
	<string name="perfect_sex_label">性别</string>
	<string name="perfect_address_label">地址</string>
	<string name="perfect_address_hint">请输入地址</string>
	<string name="perfect_church_label">教会</string>
	<string name="perfect_church_hint">请输入教会</string>
	<string name="male">男</string>
	<string name="female">女</string>
	
	<!-- 选择地区 -->
	<string name="region">地区</string>
	
	<!--上传图片  -->
	<string name="pick_photo">从相册中选取</string>
	<string name="take_photo">拍照</string>
	<string name="cancel">取消</string>
	<string name="image_max_warn">最多可以选九张照片</string>
	<string name="upload_image_falie">上传图片失败</string>
	
	<!-- user -->
	<string name="user_status_0">用户还未通过审核，请耐心等待</string>
	<string name="tips_user_attention_count_0">还没有已关注的人</string>
	
</resources>
