<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_backgroud_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/username_bg"
            android:hint="@string/reg_tel_hint"
            android:paddingLeft="50dp" />

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/password_bg"
            android:hint="@string/reg_pwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="50dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/head_bg"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/app_text_size_16" />

        <TextView
            android:id="@+id/reg_txt"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:gravity="right"
            android:paddingRight="40dp"
            android:text="@string/register"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/app_text_size_14" />
    </LinearLayout>

</ScrollView>