<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <com.yisa.pray.views.CustomHeadView
        android:id="@+id/head_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height_size"
        android:layout_alignParentTop="true"
        app:headTitle="@string/blog_add" >
    </com.yisa.pray.views.CustomHeadView>

    <LinearLayout
        android:id="@+id/categroy_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/head_view"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/blog_categroy"
            android:textColor="@android:color/black"
            android:textSize="@dimen/app_text_size_14" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/blog_categroy_chose_tips"
            android:textColor="@android:color/black"
            android:textSize="@dimen/app_text_size_14" />
    </LinearLayout>

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categroy_area"
        android:background="@color/white"
        android:hint="@string/add_blog_hint"
        android:minHeight="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/page_backgroud_color"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/upload_pic"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/upload_pic_default" />
        </LinearLayout>

        <TextView
            android:id="@+id/categroy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/blog_categroy_chose_tips"
            android:textColor="@android:color/black"
            android:textSize="@dimen/app_text_size_14" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" 
            android:gravity="center_vertical|right">

            <Button
                android:id="@+id/publish"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_shap"
                android:text="@string/publish"
                android:textColor="@color/white"
                android:textSize="@dimen/app_text_size_14" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>